fix(navigation/tabs): don't wrap tab labels

--- a/components/navigation/tabs.module.scss
+++ b/components/navigation/tabs.module.scss
@@ -23,6 +23,7 @@
     cursor: pointer;
     background: transparent;
     border: none;
+    white-space: nowrap;
 
     &:hover {
       color: map.get(config.$colors, 'foreground');
